Partie 2 , 1/=> correction