@@ -24,7 +24,6 @@ import com.ensta.myfilmlist.model.Realisateur;
 import com.ensta.myfilmlist.service.MyFilmsService;
 
 
-
 //********************************************************************************************************************
 
 @Service
@@ -54,7 +53,9 @@ public class MyFilmsServiceImpl implements MyFilmsService {
         // Liste des films réalisés non null
         List<Film> filmRealises = realisateur.getFilmRealises();
         if (filmRealises == null) {
-            throw new ServiceException("La liste des films réalisés par le réalisateur ne peut pas être null");
+            //throw new ServiceException("La liste des films réalisés par le réalisateur ne peut pas être null");
+            realisateur.setCelebre(false);
+            return realisateur;
         }
 
         // Mise à jour de la célébrité du réalisateur
@@ -142,7 +143,7 @@ public class MyFilmsServiceImpl implements MyFilmsService {
                 }
             })
             .filter(realisateur -> realisateur.isCelebre())
-            .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
@@ -157,6 +158,7 @@ public class MyFilmsServiceImpl implements MyFilmsService {
             throw new ServiceException("Problème lors de la récupération", e);
         }
     }
+
     @Override
     public FilmDTO createFilm(FilmForm filmForm) throws ServiceException {
         try {
@@ -168,11 +170,23 @@ public class MyFilmsServiceImpl implements MyFilmsService {
             film.setDuree(filmForm.getDuree());
             film.setRealisateur(realisateur);
 
+            System.out.println(realisateur.getFilmRealises());
+
             List<Film> ancienneListeFilm = new ArrayList<>(realisateur.getFilmRealises());
             ancienneListeFilm.add(film);
             realisateur.setFilmRealises(ancienneListeFilm);
+            // test
+            System.out.println(realisateur.getFilmRealises());
 
             filmDAO.save(film);
+            realisateur=updateRealisateurCelebre(realisateur);
+
+            realisateurDAO.update(realisateur);
+
+
+
+
+
 
             return FilmMapper.convertFilmToFilmDTO(film);
 
@@ -219,12 +233,17 @@ public class MyFilmsServiceImpl implements MyFilmsService {
 
     @Override
     public void deleteFilm(long id) throws ServiceException{
-        try {
-        Optional<Film> optionalFilm = filmDAO.findById(id);
-        filmDAO.delete(optionalFilm.get());}
-        catch (Exception e) {
+            try {
+
+            Optional<Film> optionalFilm = filmDAO.findById(id);
+            Film film=optionalFilm.get();
+            Realisateur realisateur=film.getRealisateur();
+            filmDAO.delete(film);
+
+            updateRealisateurCelebre(realisateur);}
+            catch (Exception e) {
             throw new ServiceException("Erreur lors de la suppression du film", e);
-        }
+            }
     }
 
 
